feat: 工具节点可绑定外部 Skill（一期：API_ENDPOINT 执行）
- 新增 Skill 实体 + skills 表（schema.sql），按 ownerId 隔离
- SkillRepository / SkillService（CRUD + API_ENDPOINT HTTP 调用 + 连通性测试）
- SkillTool 实现 PipelineTool：调用外部技能并将产物映射回 Context Bus
- PipelineEngine.resolveTools 按 toolType 查找已启用 API_ENDPOINT Skill 并包裹替代内置工具
- SkillsController 升级为完整 CRUD + /test 端点
- 前端新增技能中心页（/settings/skills）：管理 Skill、绑定工具节点、测试/启停
- GIT_REPO 类型支持配置，运行时执行留待 Phase 2 沙箱